--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<html><body><h1>Bienvenido</h1></body></html>
-<p>Esta es una nueva funcionalidad</p>
+<html><body><h1>Hola desde la rama master</h1></body></html>
