Update index.html cambio

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<html><body><h1>Hola desde la rama y feature dsede Github</h1></body></html>
+<html><body><h1>Hola desde la rama y feature dsede Github version 2</h1></body></html>
 
